Update README.md
Added instruction on fabric deployment